fix pdf link after merge

--- a/diploma/index.html
+++ b/diploma/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:msxsl="urn:schemas-microsoft-com:xslt" xmlns:xhtml="http://www.w3.org/1999/xhtml" class="supports-boxshadow no-touch" lang="en">
+<html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:msxsl="urn:schemas-microsoft-com:xslt"
+  xmlns:xhtml="http://www.w3.org/1999/xhtml" class="supports-boxshadow no-touch" lang="en">
 
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://cdn.jsdelivr.net">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@600&family=Poppins:wght@200;700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> 
+  <link
+    href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@600&family=Poppins:wght@200;700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <link rel="shortcut icon" href="./assets/favicon.svg">
   <link href="./style.css" rel="stylesheet" type="text/css">
@@ -22,7 +25,8 @@
   <header id="mini">
     <div id="top-bar">
       <div class="contain-1120 group">
-        <div id="left"><a href="https://wcu.edu.pl"><img alt="Wild Chicken University" src="../assets/Wild_Chicken_White.svg"><span class="hide-label">Wild Chicken University</span></a></div>
+        <div id="left"><a href="https://wcu.edu.pl"><img alt="Wild Chicken University"
+              src="./assets/Wild_Chicken_White.svg"><span class="hide-label">Wild Chicken University</span></a></div>
       </div>
     </div>
     <div class="bottom-bar contain-1120 group">
@@ -42,16 +46,21 @@
             </div>
           </section>
           <ul class="subtabs">
-            <li><a class="selected" href="#" onclick="$(this).parents('ul').find('.selected').removeClass('selected'); $(this).addClass('selected');">Application Status</a></li>
+            <li><a class="selected" href="#"
+                onclick="$(this).parents('ul').find('.selected').removeClass('selected'); $(this).addClass('selected');">Application
+                Status</a></li>
           </ul>
         </div>
       </div>
       <form>
         <p class="success">To get your Graduation Certificate, please enter your first name and last name.</p>
-        <p class="chinese">特别说明：因为需要加载完整的字体包，而中文的字体包体积 > 英文的字体包，所以制作中文证书的时间会比英文时间长。同时因为没有找到合适license的中文Gothic字体，所以中文专业名为 <a href="https://fonts.google.com/noto/specimen/Noto+Serif+SC">Noto Serif SC</a> 宋体，英文专业名使用 <a href="https://github.com/ctrlcctrlv/chomsky">Chomsky</a> 字体
+        <p class="chinese">特别说明：因为需要加载完整的字体包，而中文的字体包体积 > 英文的字体包，所以制作中文证书的时间会比英文时间长。同时因为没有找到合适license的中文Gothic字体，所以中文专业名为
+          <a href="https://fonts.google.com/noto/specimen/Noto+Serif+SC">Noto Serif SC</a> 宋体，英文专业名使用 <a
+            href="https://github.com/ctrlcctrlv/chomsky">Chomsky</a> 字体
         </p>
         <p>
-          These fonts are licensed under the <a href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&amp;id=OFL">Open Font License</a>. 
+          These fonts are licensed under the <a
+            href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&amp;id=OFL">Open Font License</a>.
         </p>
         <table class="plain">
           <colgroup>
@@ -61,24 +70,25 @@
           <tbody>
             <tr>
               <th><label for="fname" data-required="1">First Name:</label></th>
-              <td><input type="text" id="fname" name="fname" maxlength="20" size="10" data-required="1" spellcheck="false" required="required" aria-busy="" /></td>
+              <td><input type="text" id="fname" name="fname" maxlength="20" size="10" data-required="1"
+                  spellcheck="false" required="required" aria-busy="" /></td>
             </tr>
             <tr>
               <th><label for="lname" data-required="1" spellcheck="false">Last Name: </label></th>
-              <td><input type="text" id="lname" name="lname" maxlength="20" size="10" data-required="1" spellcheck="false" required="required" /></td>
+              <td><input type="text" id="lname" name="lname" maxlength="20" size="10" data-required="1"
+                  spellcheck="false" required="required" /></td>
             </tr>
             <tr>
               <th><label for="checkbox" data-required="1" spellcheck="false">Major: </label></th>
-              <td><input type="text" id="major" name="major" size="10" data-required="1" spellcheck="false" required="required" list="majors">
+              <td><input type="text" id="major" name="major" size="10" data-required="1" spellcheck="false"
+                  required="required" list="majors">
                 <datalist id="majors">
-                  <select>
-                    <option>用猪肉养猪的研究</option>
-                    <option>西瓜培育</option>
-                    <option>专业炸鸡烹饪</option>
-                    <option>野鸡产后护理</option>
-                    <option>胶水粘不了胶水的胶水的作用</option>
-                    <option>你可以随便输入你想要的专业</option>
-                  </select>
+                  <option>用猪肉养猪的研究</option>
+                  <option>西瓜培育</option>
+                  <option>专业炸鸡烹饪</option>
+                  <option>野鸡产后护理</option>
+                  <option>胶水粘不了胶水的胶水的作用</option>
+                  <option>你可以随便输入你想要的专业</option>
                 </datalist>
               </td>
             </tr>
@@ -86,7 +96,9 @@
         </table>
         <br>
       </form>
-      <div class="action"><button class="default" onclick="fillForm(document.getElementById('fname').value, document.getElementById('lname').value, document.getElementById('major').value); party.confetti(this);">Generate</button></div>
+      <div class="action"><button class="default"
+          onclick="fillForm(document.getElementById('fname').value, document.getElementById('lname').value, document.getElementById('major').value); party.confetti(this);">Generate</button>
+      </div>
       <p>
         <strong>Disclaimer: </strong>The material embodied in this website is provided to you "as-is" and
         without warranty of any kind, express, implied or otherwise, including
@@ -98,15 +110,20 @@
         third parties, whether or not the Wild Chicken University has been
         advised of the possibility of such loss, however caused and on any
         theory of liability, arising out of or in connection with the
-        possession, use or performance of this website. We are <b>NOT</b> affiliated with any educational institution. Files downloaded from WildChicken <b>DOES NOT</b> have ANY legal effect. We are <b>NOT</b> responsible any files downloaded from this site.</p>
-      <script src="https://utteranc.es/client.js" repo="WildChickenUniversity/WildChickenUniversity" issue-term="title" label="ADMISSION COMMENT" theme="github-light" crossorigin="anonymous" async>
-      </script>
+        possession, use or performance of this website. We are <b>NOT</b> affiliated with any educational institution.
+        Files downloaded from WildChicken <b>DOES NOT</b> have ANY legal effect. We are <b>NOT</b> responsible any files
+        downloaded from this site.
+      </p>
+      <script src="https://utteranc.es/client.js" repo="WildChickenUniversity/WildChickenUniversity" issue-term="title"
+        label="ADMISSION COMMENT" theme="github-light" crossorigin="anonymous" async>
+        </script>
 
       <div class="footer">
         <br>
         <hr>Wild Chicken University is committed to a policy of non-discrimination.
         <a href="https://wcu.edu.pl/privacy.html"> Privacy Policy </a>
-        <br> Copyleft <span class="copyleft">©</span> <a href="https://github.com/WildChickenUniversity">Wild Chicken University</a>, licensed under GPL v3. Assets have their own licenses. 
+        <br> Copyleft <span class="copyleft">©</span> <a href="https://github.com/WildChickenUniversity">Wild Chicken
+          University</a>, licensed under GPL v3. Assets have their own licenses.
       </div>
     </main>
   </div>
