--- a/cert.html
+++ b/cert.html
@@ -11,7 +11,7 @@
     rel="stylesheet">
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <link rel="shortcut icon" href="./assets/favicon.svg">
-  <link href="./style.css" rel="stylesheet" type="text/css">
+  <link href="./assets/portal.css" rel="stylesheet" type="text/css">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/pdf-lib@latest/dist/pdf-lib.min.js"></script>
@@ -25,7 +25,7 @@
   <header id="mini">
     <div id="top-bar">
       <div class="contain-1120 group">
-        <div id="left"><a href="https://wcu.edu.pl"><img alt="Wild Chicken University"
+        <div id="left"><a href="./index.html"><img alt="Wild Chicken University"
               src="./assets/Wild_Chicken_White.svg"><span class="hide-label">Wild Chicken University</span></a></div>
       </div>
     </div>
@@ -35,7 +35,7 @@
       </div>
     </div>
   </header>
-  <script src="./certificate.js"></script>
+  <script src="./assets/certificate/certificate.js"></script>
   <div id="page" class="contain-1120 group">
     <main id="main-content" class="content-full" role="main" tabindex="0">
       <div id="portal_row_container">
@@ -87,8 +87,8 @@
                   <option>西瓜培育</option>
                   <option>专业炸鸡烹饪</option>
                   <option>野鸡产后护理</option>
-                  <option>胶水粘不了胶水的胶水的作用</option>
-                  <option>你可以随便输入你想要的专业</option>
+                  <option>胶水粘不了胶水的胶水</option>
+                  <option>输入自定义专业</option>
                 </datalist>
               </td>
             </tr>
