--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,5 @@
 <div class="footer">
+    <hr>
     <ul>
         <li>
             <a href="./index.html">Home</a>
@@ -19,7 +20,7 @@
     <p>
         Copyleft <span class="copyleft">©</span> <a
             href="https://github.com/WildChickenUniversity/WildChickenUniversity">Wild Chicken University</a>, licensed
-        under <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>. Assets have their own
+        under <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> and/or <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GPLv3</a>. Assets have their own
         licenses.
     </p>
 
