--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <h2 class="title">Admission</h2>
 
           <div>
-            <button class="headline" onclick="window.open('./admission/')">
+            <button class="headline" onclick="window.open('./admission.html')">
               Apply now for FALL 2023 admission
             </button>
           </div>
@@ -91,7 +91,7 @@
             Good Luck on your college app!
           </p>
           <div class="action"><button class="default"
-              onclick="window.location.href='./admission/'">ADMISSION PORTAL</button></div>
+              onclick="window.location.href='./admission.html'">ADMISSION PORTAL</button></div>
           <div class="action"><button class="default" onclick="window.location.href='./review.html'">What Our Students
               Say</button></div>
 
@@ -109,7 +109,7 @@
             also referred to a charter or official document of diplomacy. (source: <a
               href="https://en.wikipedia.org/wiki/Diploma">wikipedia</a>) </p>
           <div class="action"><button class="default"
-              onclick="window.location.href='./diploma/'">DIPLOMA GENERATOR</button></div>
+              onclick="window.location.href='./cert.html'">DIPLOMA GENERATOR</button></div>
 
         </section>
 
