--- a/cert.html
+++ b/cert.html
@@ -118,13 +118,8 @@
         label="ADMISSION COMMENT" theme="github-light" crossorigin="anonymous" async>
         </script>
 
-      <div class="footer">
-        <br>
-        <hr>Wild Chicken University is committed to a policy of non-discrimination.
-        <a href="https://wcu.edu.pl/privacy.html"> Privacy Policy </a>
-        <br> Copyleft <span class="copyleft">©</span> <a href="https://github.com/WildChickenUniversity">Wild Chicken
-          University</a>, licensed under GPL v3. Assets have their own licenses.
-      </div>
+<iframe src="footer.html"
+onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
     </main>
   </div>
 </body>
