some legal stuff

--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
             <li>The content of the admission offer is copied from Stanford as I am too lazy to write them myself.</li>
             <li>The content of the rejection letter is copied from Northwestern since they are my ed school and they
               rejected me lmfao</li>
-            <li>The logo and the web design(and everything also) was a parody, which according to <strong><a
+            <li>The logo and the web design(and everything also) is a parody, which according to <strong><a
                   href="https://www.legislation.gov.uk/uksi/2014/2356/regulation/5/made">Section 30A of the
                   CDPA</a></strong> fair dealing with a copyrighted work for the purposes of caricature, parody, or
-              pastiche is allowed.</li>
+              pastiche is allowed; please refer to <a href="https://www.law.cornell.edu/wex/parody">Cornell Law School's website</a> for more information.</li>
             <li>If you no longer wish to continue your application to Wild Chicken, you can go <a
                 href="https://www.mcdonalds.com/us/en-us/product/chicken-mcnuggets-4-piece.html" target="_blank">BUY</a>
               some <strong>Chicken McNuggets®</strong>.</li>
