some intro about wcu, updated news

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <div class="wrapper">
     <div class="main">
       <div class="header">
-        <h1 class="title"><a href="#"><img src="./assets/Wild_Chicken_White.svg"
-              alt="Wild Chicken University" style="height:6rem; padding-top:2.3rem; padding-left:1rem;"></a></h1>
+        <h1 class="title"><a href="#"><img src="./assets/Wild_Chicken_White.svg" alt="Wild Chicken University"
+              style="height:6rem; padding-top:2.3rem; padding-left:1rem;"></a></h1>
       </div>
 
       <div class="content">
@@ -28,7 +28,7 @@
           <button class="tablinks" onclick="openTab(event, 'certificate')">Certificate</button>
           <button class="tablinks" onclick="openTab(event, 'about')">About</button>
         </div>
-        
+
         <section id="news" class="tabcontent">
           <h2 class="title">News</h2>
 
@@ -37,6 +37,14 @@
               <tr>
                 <th>Date</th>
                 <th>Info</th>
+              </tr>
+              <tr>
+                <td class="date">03.20.2023</td>
+                <td>
+                  Attention students (or chickens, we dont care)! The 2023 admission results for Wild Chicken
+                  University are now available. Check your admission page for more
+                  information.
+                </td>
               </tr>
               <tr>
                 <td class="date">01.14.2023</td>
@@ -90,8 +98,8 @@
           <p>
             Good Luck on your college app!
           </p>
-          <div class="action"><button class="default"
-              onclick="window.location.href='./admission.html'">ADMISSION PORTAL</button></div>
+          <div class="action"><button class="default" onclick="window.location.href='./admission.html'">ADMISSION
+              PORTAL</button></div>
           <div class="action"><button class="default" onclick="window.location.href='./review.html'">What Our Students
               Say</button></div>
 
@@ -108,13 +116,34 @@
             the recipient has graduated by successfully completing their courses of studies. Historically, it has
             also referred to a charter or official document of diplomacy. (source: <a
               href="https://en.wikipedia.org/wiki/Diploma">wikipedia</a>) </p>
-          <div class="action"><button class="default"
-              onclick="window.location.href='./cert.html'">DIPLOMA GENERATOR</button></div>
+          <div class="action"><button class="default" onclick="window.location.href='./cert.html'">DIPLOMA
+              GENERATOR</button></div>
 
         </section>
 
         <section id="about" class="tabcontent">
           <h2 class="title">About</h2>
+          <p><b>Chicken can't type, so we asked ChatGPT to write the following paragraph for us:</b></p>
+          <p>
+            Welcome to Wild Chicken University, the premier institution for all your poultry-related needs. Our
+            world-renowned faculty of chicken experts will teach you everything you need to know about these feathery
+            friends, from their clucking communication to their delectable taste (just kidding, we don't eat
+            our students).
+          </p>
+          <p>At Wild Chicken University, we pride ourselves on being the only university where you can major in
+            "Chickenology." Yes, that's right, a whole degree dedicated to the study of chickens. Don't believe us? Just
+            ask our esteemed faculty, including Professor Peck-a-boo, Professor Coop de Ville, and Professor Eggbert.
+          </p>
+          <p>We offer a wide range of courses, from "How to Train Your Chicken to Play Chess" to "The Art of Chicken
+            Dressage." Our state-of-the-art facilities include a chicken playground, a chicken spa, and a chicken talent
+            show stage.
+          </p>
+          <p>
+            If you're tired of the traditional university application process, don't worry. At Wild Chicken University,
+            we don't care about your GPA, test scores, or extracurricular activities. All we care about is your love for
+            chickens. So come join us, and let's cluck our way to academic success!
+          </p>
+          <p><b>Enough BS, wtf is wcu?</b></p>
           <p>
             Wild Chicken University (also known as a diploma mill or degree
             mill) is an organization that awards academic degrees and diplomas
@@ -199,7 +228,8 @@
             <li>The logo and the web design(and everything also) is a parody, which according to <strong><a
                   href="https://www.legislation.gov.uk/uksi/2014/2356/regulation/5/made">Section 30A of the
                   CDPA</a></strong> fair dealing with a copyrighted work for the purposes of caricature, parody, or
-              pastiche is allowed; please refer to <a href="https://www.law.cornell.edu/wex/parody">Cornell Law School's website</a> for more information.</li>
+              pastiche is allowed; please refer to <a href="https://www.law.cornell.edu/wex/parody">Cornell Law School's
+                website</a> for more information.</li>
             <li>If you no longer wish to continue your application to Wild Chicken, you can go <a
                 href="https://www.mcdonalds.com/us/en-us/product/chicken-mcnuggets-4-piece.html" target="_blank">BUY</a>
               some <strong>Chicken McNuggets®</strong>.</li>
@@ -220,7 +250,8 @@
       </div>
       </section>
 
-      <iframe src="footer.html" onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
+      <iframe src="footer.html"
+        onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
 
       <script src="https://utteranc.es/client.js" repo="WildChickenUniversity/WildChickenUniversity" issue-term="title"
         label="ADMISSION COMMENT" theme="github-light" crossorigin="anonymous" async>
