--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@
           </p>
         </section>
 
+
+
         <section id="mascot">
           <h2 class="title">Mascot</h2>
           <p>We've made a mascot for Wild Chicken University. Of course, it is a chicken 🐔️.
@@ -183,7 +185,25 @@
           </p>
         </section>
 
+        <section id="game">
+          <h2 class="title">Game</h2>
+          <p>
+            《野鸡大学》是一款反应当代大学生生活现状的2d模拟游戏。你，扮演一个在Wild Chicken University上学的大学生，为自己生活的方方面面拿主意———
+          </p>
+          <p>
+            面对学业上的难题，你是全力以赴，还是“逃避可耻但是有用”？
+            面对丰富多彩的娱乐，你是浅尝辄止，还是全身心投入享受快乐？
+            是否会挑灯夜战，牺牲睡眠时间和质量来换取更高的绩点？
+            抑或是深夜开黑，毕竟大半夜总是上分的好时机。
+          </p>
 
+          <p>
+            是卷还是摆，是争当内卷之王还是躺下摆烂，全凭你决定！
+          </p>
+          <iframe height="167" frameborder="0" src="https://itch.io/embed/1361579" width="552"><a
+              href="https://cianokias.itch.io/wild-chicken-university">野鸡大学 by Ziduan</a></iframe>
+          <p></p>
+        </section>
 
         <section id="non-sense">
           <h2 class="title">Why this simple HTML site?</h2>
