--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <p>
             是卷还是摆，是争当内卷之王还是躺下摆烂，全凭你决定！
           </p>
-          <iframe height="167" frameborder="0" src="https://itch.io/embed/1361579" width="552"><a
+          <iframe height="167" width="80%" frameborder="0" src="https://itch.io/embed/1361579" width="552"><a
               href="https://cianokias.itch.io/wild-chicken-university">野鸡大学 by Ziduan</a></iframe>
           <p></p>
         </section>
