--- a/index.html
+++ b/index.html
@@ -205,6 +205,14 @@
           <p></p>
         </section>
 
+        <section id="academic">
+          <h2 class="title">Academic Achievements</h2>
+          <p>
+            Read this masterpiece written on 18-Jan-2007.
+            <br><a href="https://isotropic.org/papers/chicken.pdf">Click here</a>
+          </p>
+        </section>
+
         <section id="non-sense">
           <h2 class="title">Why this simple HTML site?</h2>
           <p>What else are you expecting from Wild Chicken University? React.js/Vue.js?</p>
