--- a/index.html
+++ b/index.html
@@ -174,7 +174,13 @@
           </p>
         </section>
 
-
+        <section id="tree">
+          <h2 class="title">樹洞</h2>
+          <p>想找一個樹洞或者情緒垃圾桶嗎？
+          <div class="action"><button class="default" onclick="window.location.href='https://a.brokenmind.homes'">Jump
+              Right In</button></div>
+          </p>
+        </section>
 
         <section id="mascot">
           <h2 class="title">Mascot</h2>
