update for fall 2024

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
           <div>
             <button class="headline" onclick="window.open('./admission.html')">
-              Apply now for FALL 2023 admission
+              Apply now for FALL 2024 admission <br> (i know, it's another year)
             </button>
           </div>
           <p>
@@ -171,14 +171,6 @@
           <br />
           Copied from: <a href="https://www.facebook.com/Wild-Chicken-University-170013173058220/about">Wild Chicken
             University on Facebook(or should we call it Meta?)</a>
-          </p>
-        </section>
-
-        <section id="tree">
-          <h2 class="title">樹洞</h2>
-          <p>想找一個樹洞或者情緒垃圾桶嗎？
-          <div class="action"><button class="default" onclick="window.location.href='https://a.brokenmind.homes'">Jump
-              Right In</button></div>
           </p>
         </section>
 
