added a real major

--- a/cert.html
+++ b/cert.html
@@ -88,6 +88,7 @@
                   <option>专业炸鸡烹饪</option>
                   <option>野鸡产后护理</option>
                   <option>胶水粘不了胶水的胶水</option>
+                  <option>个人练习生</option>
                   <option>输入自定义专业</option>
                 </datalist>
               </td>
